# arca

./: .gitignore  CHANGELOG.md  CHATGPT_PRODUCT_CONTEXT_v0.1.0-beta.2.md  PRIVATE_ALPHA_DISTRIBUTION.md  PRODUCTIZATION_ROADMAP.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_PRIVATE_ALPHA_TEMPLATE.md  RELEASE_NOTES_v0.1.0-beta.1.md  RELEASE_NOTES_v0.1.0-beta.14.md  RELEASE_NOTES_v0.1.0-beta.2.md  RELEASE_NOTES_v0.1.0-beta.3.md  RELEASE_NOTES_v0.1.0-beta.4.md  ROADMAP.md  package-lock.json  package.json
design/: ACTIONABLE_COACHES_SPEC.md  AI_ASSISTANT_CONTRACT_v1.md  AI_PRIVACY_AND_OLLAMA_SPEC.md  AI_PROVIDER_IMPLEMENTATION_NOTES_v1.md  COACH_UI_REDESIGN_SPEC.md  COMPANION_APP_ARCHITECTURE_v2.md  CRYPTOPRO_AUDIT_AND_CRYPTO_BUILD.md  DECISION_REACTIVATE_TRACK_A_HEALTH_SYNC_FOUNDATION.md  DESKTOP_v2_BRIEF.md  DESKTOP_v3_BRIEF.md  DISCOVERABILITY_DEBT.md  DOMAIN_COACH_PATTERN_BRIEF.md  HEALTHY_WEALTHY_WISE_IA.md  HEALTH_BUILD_SPEC_v1.md  HEALTH_MODULE_PRD_v1.md  IDEA_APPLE_HEALTHKIT_INTEGRATION.md  IDEA_CUSTOMIZABLE_SHORTCUTS.md  IDEA_FOCUS_MUSIC_TIMER.md  IDEA_PHONE_TASKS_TAB.md  IDEA_SHARED_TEAM_BOARD.md  IOS_TESTING_RUNBOOK_v1.md  LOCAL_AI_SETUP_WIZARD_SPEC_v1.md  MOBILE_CLOUD_PHASE1_PLAN.md  MOBILE_COMPANION_BUILD_CHECKLIST_v1.md  MOBILE_COMPANION_PRD_v1.md  MOBILE_COMPANION_STRATEGY_v1.md  MODULE_EXTRACTION_SPEC.md  PRODUCT_NAMING_OPTIONS_v1.md  PRODUCT_NAMING_OPTIONS_v2.md  PRODUCT_NAMING_OPTIONS_v3.md  (+12 more)
src/: index.html  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+66 files in other folders)
